# nwslpy

./: .gitignore  LICENSE  README.md  draft.ipynb  prototype.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
examples/: example_1.ipynb  example_2.ipynb
nwslpy/: __init__.py  nwslpy.py  test_nwslpy.py
test/: test_nwslpy.py
