[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nwslpy"
version = "0.0.0.7000"
authors = [
  { name="Alison Gale", email="agale123.dev@gmail.com" },
]
description = "Python wrapper around the nwslR library"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nwslR/nwslpy"
"Bug Tracker" = "https://github.com/nwslR/nwslpy/issues"